# packages/api/src/index.ts
@@ -3,3 +3,4 @@ import type { components } from './generated/api-types';
 export type { components };
 export type Region = components['schemas']['RegionDto'];
 export type Sector = components['schemas']['SectorDto'];
+export type Route = components['schemas']['RouteDto'];
